<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_unifier</name>
  <version>0.1.0</version>
  <description>Launch unifier</description>
  <maintainer email="mfc@leodrive.ai">M. Fatih Cırıt</maintainer>
  <maintainer email="kenji.miyake@tier4.jp">Kenji Miyake</maintainer>
  <license>Apache-2.0</license>

  <depend>ros2launch</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
